--- a/AplicaciónWeb/index.html
+++ b/AplicaciónWeb/index.html
@@ -8,7 +8,7 @@
 <body>
   <form action="conexionBD.php" method="post">
     Nombre Usuario: <input type="text" name="nombre"> <br/>
-    Identificador Tabla Periódica: <input type="number" name="oid_tabla_periodica"> <br/>
+    Identificador Tabla Periódica: <input type="text" name="oid_tabla_periodica"> <br/>
     <input type="submit" name="enviar" value="Enviar">
   </form>
 </html>
