--- a/APP WEB/index.html
+++ b/APP WEB/index.html
@@ -1,14 +1,6 @@
-<html lang="es">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,user.scalable=no,
-  initial-scale=1,maximun-scale=1,minimum-scale=1">
-  <title>Formulario</title>
-</head>
-<body>
-  <form action="conexionBD.php" method="post">
-    Nombre Usuario: <input type="text" name="nombre"> <br/>
-    Identificador Tabla Periódica: <input type="text" name="oid_tabla_periodica"> <br/>
-    <input type="submit" name="enviar" value="Enviar">
-  </form>
+<html>
+<body id='bod'><button type="submit" onclick="javascript:send()">call</button>
+<div id='div'>
+
+</div></body>
 </html>
